syntax = "proto3";

package regen.ecocredit.marketplace.v1;

// AllowedDenom represents the information for an allowed ask/bid denom.
message AllowedDenom {
  // denom is the bank denom to allow (ex. ibc/GLKHDSG423SGS)
  string bank_denom = 1;

  // display_denom is the denom to display to the user and is informational.
  // Because the denom is likely an IBC denom, this should be chosen by
  // governance to represent the consensus trusted name of the denom.
  string display_denom = 2;

  // exponent is the exponent that relates the denom to the display_denom and is
  // informational
  uint32 exponent = 3;
}

// FeeParams represents the marketplace fee parameters. Fees will be charged in the
// same denom that the order is denominated in and deposited into the marketplace
// fee pool, except when the denom is regen, in which case the fees will be
// burned. Fees in the fee pool are expected to burned by governance in a manual
// process unless governance agrees to a different approach.
message FeeParams {
  // buyer_percentage_fee is the decimal percentage fee charged to the buyer.
  // The string 0.03 means a 3.0% fee.
  // This fee will be added to the total price of a buy order and is denominated
  // in the same denom as the buy order's bid denom.
  string buyer_percentage_fee = 1;

  // seller_percentage_fee is the decimal percentage fee charged to the seller.
  // The string 0.03 means a 3.0% fee.
  // This fee will be subtracted from the total proceeds of a sell order distributed to the seller
  // and is denominated in the same denom as the sell order's ask denom.
  string seller_percentage_fee = 2;
}
