syntax = "proto3";

package regen.ecocredit.v1;

// CreditType defines the measurement unit/precision of a certain credit type
// (e.g. carbon, biodiversity...)
message CreditType {
  // abbreviation is a 1-3 character uppercase abbreviation of the CreditType
  // name, used in batch denominations within the CreditType. It must be unique.
  string abbreviation = 1;

  // name is the name of the credit type (e.g. carbon, biodiversity).
  string name = 2;

  // unit is the measurement unit of the credit type (e.g. kg, ton).
  string unit = 3;

  // precision is the decimal precision of the credit type.
  uint32 precision = 4;
}
